--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-svgpart (4:4.7.2-0r1) experimental; urgency=low
+svgpart (4:4.7.2-1) experimental; urgency=low
 
   [ Pino Toscano ]
   * Initial release.
