--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+svgpart (4:4.7.4-0r0) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+  [ Eshat Cakar ]
+  * Add myself to uploaders.
+  * Bump kde-sc-dev-latest build dependency to 4:4.7.4.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 07 Dec 2011 22:53:34 +0100
+
 svgpart (4:4.7.2-1) experimental; urgency=low
 
   [ Pino Toscano ]
