--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-svgpart (4:4.7.4-0r0) UNRELEASED; urgency=low
+svgpart (4:4.7.4-1) experimental; urgency=low
 
   * New upstream release.
 
@@ -6,7 +6,7 @@ svgpart (4:4.7.4-0r0) UNRELEASED; urgency=low
   * Add myself to uploaders.
   * Bump kde-sc-dev-latest build dependency to 4:4.7.4.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 07 Dec 2011 22:53:34 +0100
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 18 Dec 2011 01:39:06 +0100
 
 svgpart (4:4.7.2-1) experimental; urgency=low
 
