--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ svgpart (4:4.8.4-0r1) UNRELEASED; urgency=low
 
   [ Pino Toscano ]
   * New upstream release.
+  * Bump kde-sc-dev-latest build dependency to 4.8.4.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 16 Jun 2012 17:48:05 +0200
 
