--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-svgpart (4:4.8.4-0r1) UNRELEASED; urgency=low
+svgpart (4:4.8.4-1) unstable; urgency=low
 
-  [ Pino Toscano ]
   * New upstream release.
   * Bump kde-sc-dev-latest build dependency to 4.8.4.
   * Bump kdelibs5-dev build dependency to 4.8.
@@ -8,7 +7,7 @@ svgpart (4:4.8.4-0r1) UNRELEASED; urgency=low
   * Add watch file.
   * Convert copyright to copyright-format v1.0 and fix/update.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 16 Jun 2012 17:48:05 +0200
+ -- Pino Toscano <pino@debian.org>  Sat, 16 Jun 2012 17:55:02 +0200
 
 svgpart (4:4.7.4-2) unstable; urgency=low
 
