--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-svgpart (4:4.10.0-0r1) UNRELEASED; urgency=low
+svgpart (4:4.10.2-1) UNRELEASED; urgency=low
 
-  * Non-maintainer upload.
   * New upstream
+  * Bump kde-sc-dev-latest build dependency to 4.10.1
+  * Bump kdelibs5-dev build dependency to 4.10
 
- -- Diane Trout <diane@ghic.org>  Tue, 01 Jan 2013 18:40:27 -0800
+ -- Diane Trout <diane@ghic.org>  Sun, 07 Apr 2013 20:46:52 -0700
 
 svgpart (4:4.8.4-1) unstable; urgency=low
 
