--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-svgpart (4:4.10.4-1) UNRELEASED; urgency=low
+svgpart (4:4.10.4-1) experimental; urgency=low
 
   * New upstream release.
   * Bump debhelper build-dep and compat to 9.
@@ -6,7 +6,7 @@ svgpart (4:4.10.4-1) UNRELEASED; urgency=low
   * Update vcs fields.
   * Add myself to uploaders.
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 12 Jun 2013 13:53:57 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 14 Jun 2013 13:59:06 +0200
 
 svgpart (4:4.10.2-1) experimental; urgency=low
 
