--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-svgpart (4:4.11.2-1) UNRELEASED; urgency=low
+svgpart (4:4.11.2-1) experimental; urgency=low
 
   * New upstream release.
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 08 Oct 2013 11:55:51 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 08 Oct 2013 12:15:03 +0200
 
 svgpart (4:4.10.5-1) unstable; urgency=low
 
