--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-svgpart (4:4.11.3-1) UNRELEASED; urgency=low
+svgpart (4:4.11.3-1) unstable; urgency=low
 
   * New upstream release.
   * Update build dependencies.
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 08 Nov 2013 18:32:19 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 09 Nov 2013 12:38:12 +0100
 
 svgpart (4:4.11.2-1) experimental; urgency=low
 
