--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+svgpart (4:4.11.3-2) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 03 Feb 2014 11:24:14 +0100
+
 svgpart (4:4.11.3-1) unstable; urgency=low
 
   * New upstream release.
