--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-svgpart (4:4.11.3-2) UNRELEASED; urgency=medium
+svgpart (4:4.12.2-1) UNRELEASED; urgency=medium
 
   * Do not disable an empty test set.
   * Bump Standards-Version to 3.9.5, no changes needed.
+  * New upstream release.
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 03 Feb 2014 11:24:14 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 04 Feb 2014 22:19:36 +0100
 
 svgpart (4:4.11.3-1) unstable; urgency=low
 
