--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-svgpart (4:4.11.3-2) UNRELEASED; urgency=medium
+svgpart (4:4.11.3-2) unstable; urgency=medium
 
   * Do not disable an empty test set.
   * Bump Standards-Version to 3.9.5, no changes needed.
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 03 Feb 2014 11:24:14 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 03 Apr 2014 11:21:01 +0200
 
 svgpart (4:4.11.3-1) unstable; urgency=low
 
