--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-svgpart (4:14.11.97-0ubuntu1~ubuntu15.04~ppa1) vivid; urgency=medium
+svgpart (4:14.11.97-0ubuntu1) vivid; urgency=medium
 
   * New upstream RC release
 
