--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+svgpart (4:14.12.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 12 Dec 2014 12:08:43 -0800
+
 svgpart (4:14.11.97-0ubuntu1) vivid; urgency=medium
 
   * New upstream RC release
