--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 svgpart (4:14.12.0-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * Remove kdelibs5-dev depend version as there was not a new release.
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 12 Dec 2014 12:08:43 -0800
 
