--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-svgpart (4:14.12.0-0ubuntu1) UNRELEASED; urgency=medium
+svgpart (4:14.12.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
   * Remove kdelibs5-dev depend version as there was not a new release.
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 12 Dec 2014 12:08:43 -0800
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 15 Dec 2014 16:05:04 +0100
 
 svgpart (4:14.11.97-0ubuntu1) vivid; urgency=medium
 
