--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+svgpart (4:14.12.2-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 06 Feb 2015 12:32:04 -0800
+
 svgpart (4:14.12.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
