--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+svgpart (4:14.12.3-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 09 Mar 2015 11:45:46 -0700
+
 svgpart (4:14.12.2-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
