--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-svgpart (4:14.12.3-0ubuntu1) UNRELEASED; urgency=medium
+svgpart (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 09 Mar 2015 11:45:46 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 13 Mar 2015 13:46:08 -0700
 
 svgpart (4:14.12.2-0ubuntu1) vivid; urgency=medium
 
