--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-svgpart (4:15.07.90-0ubuntu1) UNRELEASED; urgency=medium
+svgpart (4:15.07.90-0ubuntu1) wily; urgency=medium
 
   * new upstream beta release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 13 Aug 2015 11:49:24 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 18 Aug 2015 12:34:50 +0100
 
 svgpart (4:15.04.2-0ubuntu1) wily; urgency=medium
 
