--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-svgpart (4:15.08.0-0ubuntu1) UNRELEASED; urgency=medium
+svgpart (4:15.08.0-0ubuntu1) wily; urgency=medium
 
   * new upstream release
 
- -- Clive Johnston <clivejo@aol.com>  Thu, 20 Aug 2015 14:27:30 +0000
+ -- Clive Johnston <clivejo@aol.com>  Wed, 26 Aug 2015 18:23:57 +0100
 
 svgpart (4:15.07.90-0ubuntu1) wily; urgency=medium
 
