New upstream release (15.18.1)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+svgpart (4:15.08.1-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release (15.18.1)
+
+ -- Clive Johnston <clivejo@aol.com>  Thu, 17 Sep 2015 11:46:49 +0100
+
 svgpart (4:15.08.0-0ubuntu1) wily; urgency=medium
 
   * new upstream release
