--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-svgpart (4:15.08.1-0ubuntu1) UNRELEASED; urgency=medium
+svgpart (4:15.08.1-0ubuntu1) wily; urgency=medium
 
   * New upstream release (15.08.1)
 
- -- Clive Johnston <clivejo@aol.com>  Thu, 17 Sep 2015 11:46:49 +0100
+ -- Clive Johnston <clivejo@aol.com>  Tue, 22 Sep 2015 17:48:06 +0100
 
 svgpart (4:15.08.0-0ubuntu1) wily; urgency=medium
 
