--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+svgpart (4:15.08.2-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 09 Oct 2015 15:20:20 -0700
+
 svgpart (4:15.08.1-0ubuntu1) wily; urgency=medium
 
   * New upstream release (15.08.1)
