--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-svgpart (4:15.08.1-0ubuntu1) UNRELEASED; urgency=medium
+svgpart (4:15.08.2-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release
   * Vivid backport
+  * Vivid backport
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 01 Oct 2015 12:46:43 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Sun, 18 Oct 2015 10:35:10 -0700
 
 svgpart (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
