--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+svgpart (4:15.12.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release 
+
+ -- Clive Johnston <clivejo@aol.com>  Sat, 02 Jan 2016 23:53:36 +0000
+
 svgpart (4:15.08.2-0ubuntu1) wily; urgency=medium
 
   * New upstream release
