--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-svgpart (4:15.12.1-0ubuntu1) UNRELEASED; urgency=medium
+svgpart (4:15.12.1-0ubuntu1) xenial; urgency=medium
 
   * New upstream release
   * Merged with Debian 
 
- -- Clive Johnston <clivejo@aol.com>  Sun, 07 Feb 2016 15:23:36 +0000
+ -- Clive Johnston <clivejo@aol.com>  Wed, 09 Mar 2016 11:37:15 +0100
 
 svgpart (4:15.12.0-1) experimental; urgency=medium
 
