--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+svgpart (4:15.12.2-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream bugfix release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 09 Mar 2016 22:44:23 -0800
+
 svgpart (4:15.12.1-0ubuntu1) xenial; urgency=medium
 
   * New upstream release
