--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,6 @@
-svgpart (4:15.12.0-2~2.gbp225353) UNRELEASED; urgency=medium
-
-  ** SNAPSHOT build @225353cb9cacb60adda762bbde19cbc6e3dd1c21 **
+svgpart (4:15.12.0-2) unstable; urgency=medium
 
   [ Automatic packaging ]
-  ** SNAPSHOT build @4c3f62fecdd9290fbc4176dfe36ca5cb63262869 **
-
   * Bump Standards-Version to 3.9.8
 
   [ Maximiliano Curia ]
@@ -12,7 +8,7 @@ svgpart (4:15.12.0-2~2.gbp225353) UNRELEASED; urgency=medium
   * debian/control: Update Vcs-Browser and Vcs-Git fields
   * Update vcs uris to the applications one
 
- -- Maximiliano Curia <maxy@gnuservers.com.ar>  Mon, 09 May 2016 11:22:19 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 21 May 2016 23:56:07 +0200
 
 svgpart (4:15.12.0-1) experimental; urgency=medium
 
