--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+svgpart (4:16.08.0-0r1) UNRELEASED; urgency=medium
+
+  [ Pino Toscano ]
+  * New upstream release.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 28 Aug 2016 08:15:58 +0200
+
 svgpart (4:15.12.0-2) unstable; urgency=medium
 
   [ Automatic packaging ]
