--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,8 @@
-svgpart (4:16.08.0-0r1) UNRELEASED; urgency=medium
+svgpart (4:16.08.0-1) unstable; urgency=medium
 
-  [ Pino Toscano ]
   * New upstream release.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 28 Aug 2016 08:15:58 +0200
+ -- Pino Toscano <pino@debian.org>  Sun, 28 Aug 2016 08:17:57 +0200
 
 svgpart (4:15.12.0-2) unstable; urgency=medium
 
