--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,12 @@
-svgpart (4:17.08.1-1~) UNRELEASED; urgency=medium
+svgpart (4:17.08.1-1) experimental; urgency=medium
 
   * New upstream release (17.08.1)
   * Bump Standards-Version to 4.1.0.
   * Update upstream metadata
   * Update build-deps and deps with the info from cmake
+  * Release to experimental
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 12 Sep 2017 14:31:04 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 12 Sep 2017 22:41:31 +0200
 
 svgpart (4:17.08.1-0neon) xenial; urgency=medium
 
