--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ svgpart (4:17.08.3-0r1) UNRELEASED; urgency=medium
   * New upstream release.
   * Bump Standards-Version to 4.1.3, no changes required.
   * Simplify watch file, and switch it to https.
+  * Adjust l10npkgs_firstversion_ok to the version where kde-l10n will
+    drop translations.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 18 Dec 2017 15:58:02 +0100
 
