--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,13 @@
-svgpart (4:17.08.3-0r1) UNRELEASED; urgency=medium
+svgpart (4:17.08.3-1) unstable; urgency=medium
 
-  [ Pino Toscano ]
+  * Upload to unstable.
   * New upstream release.
   * Bump Standards-Version to 4.1.3, no changes required.
   * Simplify watch file, and switch it to https.
   * Adjust l10npkgs_firstversion_ok to the version where kde-l10n will
     drop translations.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 18 Dec 2017 15:58:02 +0100
+ -- Pino Toscano <pino@debian.org>  Thu, 28 Dec 2017 13:09:55 +0100
 
 svgpart (4:17.08.1-1) experimental; urgency=medium
 
